First two runs of experiment

--- a/other/test_scripts/ranking/Yahoo_Data_Processing.ipynb
+++ b/other/test_scripts/ranking/Yahoo_Data_Processing.ipynb
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = data_utils.read_data(data_path='/Users/Ashtekar15/Desktop/Thesis/MGBoost/other/test_data/generate_dataset/',\n",
-    "                            file_prefix='train')"
+    "                            file_prefix='valid')"
    ]
   },
   {
@@ -89,20 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "29921"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Num queries in train/val/test (should be 29921)\n",
     "19944 + 2994 + 6983"
@@ -110,22 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(23.723124749298034, 18.310095072710077, 1, 139)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get info on number of URLs/query\n",
     "lls = []\n",
@@ -138,20 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7563852547382973"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Solve for num_queries\n",
     "num_queries = 10\n",
@@ -164,20 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2407.1892096"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To get total number of values FOR ENTIRE TRAIN SET thru feature generation\n",
     "total = 0\n",
@@ -214,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,15 +191,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" SET SEED FOR RANDOM QUERY SELECTION HERE \"\"\"\n",
-    "np.random.seed(1)\n",
+    "\"\"\" SAVING ENTIRE DATASET \"\"\"\n",
+    "# folder = 'Yahoo_Train//'\n",
     "\n",
-    "# Randomly select 10 queries\n",
-    "q_choice = np.random.choice(qids, size=10)\n",
+    "# np.save(folder + 'dids.npy', dids)\n",
+    "# np.save(folder + 'qids.npy', qids)\n",
+    "# np.save(folder + 'features.npy', features)\n",
+    "# np.save(folder + 'gold_weights.npy', gold_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run imports and cells below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" LOADING ENTIRE DATASET \"\"\"\n",
+    "folder = 'Yahoo_Val//'\n",
+    "\n",
+    "dids = np.load(folder + 'dids.npy')\n",
+    "qids = np.load(folder + 'qids.npy')\n",
+    "features = np.load(folder + 'features.npy')\n",
+    "gold_weights = np.load(folder + 'gold_weights.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" SET SIZE, SEED FOR RANDOM QUERY SELECTION HERE \"\"\"\n",
+    "np.random.seed(2)\n",
+    "size = 5\n",
+    "\n",
+    "# Randomly select 10 queries (train) or 5 queries (val)\n",
+    "q_choice = np.random.choice(qids, size=size)\n",
     "\n",
     "# Get query id aligned with features\n",
     "query_id = np.array([int(ele.split(\"_\")[1]) for ele in dids])"
@@ -251,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,12 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Important to free up memory\n",
-    "del data, dids, qids, features, gold_weights"
+    "# del data\n",
+    "del dids, qids, features, gold_weights"
    ]
   },
   {
@@ -286,29 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
       "1\n",
       "2\n",
       "3\n",
       "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "\"\"\" SET DELTA FEATURES HERE \"\"\"\n",
-    "delta_features = False\n",
+    "\"\"\" SET DELTA FEATURES, REPEAT IMPORTANCE HERE \"\"\"\n",
+    "delta_features = True\n",
+    "repeat_importance = False\n",
     "\n",
     "n_rows = 0\n",
     "max_diff = 4\n",
@@ -316,7 +307,13 @@
     "\n",
     "# Find max possible number of rows: n_queries * (n_urls_per_query ^ 2) * max_repeat_factor\n",
     "for qid in q_choice:\n",
-    "    n_rows += (np.sum(np.isin(q_rel, qid)) ** 2) * max_diff\n",
+    "    urls_per_query = np.sum(np.isin(q_rel, qid))\n",
+    "    \n",
+    "    # If not repeating importance, then every query-URL pair only appears once\n",
+    "    if repeat_importance:\n",
+    "        n_rows += (urls_per_query ** 2) * max_diff\n",
+    "    else:\n",
+    "        n_rows += (urls_per_query ** 2)\n",
     "    \n",
     "# Add extra set of columns if delta_features, + 2 for (query_id, label)\n",
     "if delta_features:\n",
@@ -344,8 +341,11 @@
     "            \n",
     "            label_diff = temp_label[i] - temp_label[j]\n",
     "            \n",
-    "            # Repeat importance: duplicate row |label_diff| times in next loop\n",
-    "            end_k = int(abs(label_diff)) + 1\n",
+    "            # Repeat importance: duplicate row |label_diff| times\n",
+    "            if repeat_importance:\n",
+    "                end_k = int(abs(label_diff)) + 1\n",
+    "            else:\n",
+    "                end_k = 1\n",
     "\n",
     "            for k in range(end_k):\n",
     "\n",
@@ -371,6 +371,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Save train/val features\n",
+    "# train_feat = features\n",
+    "val_feat = features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((19795, 2102), (5817, 2102))"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_feat.shape, val_feat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To work with model\n",
+    "test_feat = val_feat"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -379,16 +420,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model fitted\n",
+      "Query 21553, m=6:\n",
+      "\tMAP:     1.0000\n",
+      "\tNDCG@1:  1.0000\n",
+      "\tNDCG@3:  1.0000\n",
+      "\tNDCG@5:  1.0000\n",
+      "\tNDCG@10: 1.0000\n",
+      "\tNDCG@m:  1.0000\n",
+      "Query 22292, m=31:\n",
+      "\tMAP:     0.9087\n",
+      "\tNDCG@1:  0.6667\n",
+      "\tNDCG@3:  0.5867\n",
+      "\tNDCG@5:  0.5189\n",
+      "\tNDCG@10: 0.6442\n",
+      "\tNDCG@m:  0.8195\n",
+      "Query 22459, m=50:\n",
+      "\tMAP:     0.9207\n",
+      "\tNDCG@1:  0.2500\n",
+      "\tNDCG@3:  0.5087\n",
+      "\tNDCG@5:  0.5072\n",
+      "\tNDCG@10: 0.5055\n",
+      "\tNDCG@m:  0.7855\n",
+      "Query 22486, m=32:\n",
+      "\tMAP:     0.5441\n",
+      "\tNDCG@1:  0.0000\n",
+      "\tNDCG@3:  0.2398\n",
+      "\tNDCG@5:  0.3276\n",
+      "\tNDCG@10: 0.4653\n",
+      "\tNDCG@m:  0.6350\n",
+      "Query 22520, m=36:\n",
+      "\tMAP:     0.7870\n",
+      "\tNDCG@1:  0.5000\n",
+      "\tNDCG@3:  0.4319\n",
+      "\tNDCG@5:  0.6168\n",
+      "\tNDCG@10: 0.7063\n",
+      "\tNDCG@m:  0.8188\n",
+      "\n",
+      "Overall:\n",
+      "\tMAP:     0.8321\n",
+      "\tNDCG@1:  0.4833\n",
+      "\tNDCG@3:  0.5534\n",
+      "\tNDCG@5:  0.5941\n",
+      "\tNDCG@10: 0.6643\n",
+      "\tNDCG@m:  0.8118\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" TRAIN \"\"\"\n",
+    "# Features does not include i, j, does includes query_id\n",
+    "X_train = train_feat[:, :-1]\n",
+    "y_train = train_feat[:, -1]\n",
+    "\n",
+    "# Same parameters for all calls to ensure consistency\n",
+    "xgbr = XGBRegressor(max_depth=6, \n",
+    "                    learning_rate=0.1,\n",
+    "                    n_estimators=100, # Change to make faster OR more powerful (?)\n",
+    "                    objective='reg:squarederror')\n",
+    "\n",
+    "xgbr.fit(X_train, y_train)\n",
+    "\n",
+    "print('Model fitted')\n",
+    "\n",
+    "\"\"\" TEST \"\"\"\n",
+    "# Want to make predictions on every URL pair within a query, for all queries\n",
+    "X_test = test_feat[:, :-1]\n",
+    "y_test = test_feat[:, -1]\n",
+    "y_pred = xgbr.predict(X_test)\n",
+    "\n",
+    "# Record results over all queries\n",
+    "MAP = 0\n",
+    "NDCG1, NDCG3, NDCG5, NDCG10, NDCGM = 0, 0, 0, 0, 0\n",
+    "\n",
+    "# Save rankings (to visually compare)\n",
+    "r_ls = []\n",
+    "\n",
+    "# For each query, make a prediction array (scores)\n",
+    "for qid in np.unique(X_test[:, 0]):\n",
+    "\n",
+    "    # m will be the number of URLs per given query ID\n",
+    "    m = int(np.sqrt(np.sum(X_test[:, 0] == qid)))\n",
+    "\n",
+    "    # Save y_pred only for query of interest as y_pq, reshape in order to sum across rows\n",
+    "    # Note that the default order='C' in reshape is fine (row-major)\n",
+    "    # Setting order='F' will result in roughly the same result, just reversed since the \n",
+    "    # learned labels correspond to (URLi - URLj)\n",
+    "    y_pq = y_pred[X_test[:, 0] == qid]\n",
+    "    y_pq = y_pq.reshape(m, m, order='C')\n",
+    "\n",
+    "    # Apply logistic function\n",
+    "    y_pq = expit(y_pq)\n",
+    "\n",
+    "    # Sum across rows to get 'power' of each individual training example\n",
+    "    # Get order using the scores as indices\n",
+    "    scores = np.sum(y_pq, axis=0)\n",
+    "    order = np.argsort(scores)\n",
+    "\n",
+    "    # Apply order to original labels\n",
+    "    y_orig = label_rel[feat_rel[:, 0] == qid]\n",
+    "    r = y_orig[order]\n",
+    "    \n",
+    "    # Save ranking\n",
+    "    r_ls.append(r)\n",
+    "\n",
+    "    # Get results\n",
+    "    m_a_p = mean_average_precision([r])\n",
+    "    n1, n3, n5, n10, nm = ndcg_at_k(r=r, k=1),ndcg_at_k(r=r, k=3), ndcg_at_k(r=r, k=5), ndcg_at_k(r=r, k=10), ndcg_at_k(r=r, k=m)\n",
+    "\n",
+    "    # Update overall results\n",
+    "    MAP += m_a_p\n",
+    "    NDCG1 += n1\n",
+    "    NDCG3 += n3\n",
+    "    NDCG5 += n5\n",
+    "    NDCG10 += n10\n",
+    "    NDCGM += nm\n",
+    "\n",
+    "    # Results for query\n",
+    "    print('Query %d, m=%d:' % (qid, m))\n",
+    "    print('\\tMAP:     %.4f' % m_a_p)\n",
+    "    print('\\tNDCG@1:  %.4f' % n1)\n",
+    "    print('\\tNDCG@3:  %.4f' % n3)\n",
+    "    print('\\tNDCG@5:  %.4f' % n5)\n",
+    "    print('\\tNDCG@10: %.4f' % n10)\n",
+    "    print('\\tNDCG@m:  %.4f' % nm)\n",
+    "\n",
+    "# Results over all queries\n",
+    "print('\\nOverall:')\n",
+    "print('\\tMAP:     %.4f' % (MAP / size))\n",
+    "print('\\tNDCG@1:  %.4f' % (NDCG1 / size))\n",
+    "print('\\tNDCG@3:  %.4f' % (NDCG3 / size))\n",
+    "print('\\tNDCG@5:  %.4f' % (NDCG5 / size))\n",
+    "print('\\tNDCG@10: %.4f' % (NDCG10 / size))\n",
+    "print('\\tNDCG@m:  %.4f' % (NDCGM / size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([2., 1., 1., 1., 1., 1.], dtype=float32),\n",
+       " array([2., 2., 1., 0., 1., 2., 2., 3., 1., 2., 1., 1., 1., 0., 2., 1., 1.,\n",
+       "        1., 3., 3., 1., 2., 1., 2., 1., 1., 2., 1., 2., 1., 2.],\n",
+       "       dtype=float32),\n",
+       " array([1., 1., 4., 1., 1., 1., 1., 1., 1., 1., 2., 3., 1., 1., 2., 1., 2.,\n",
+       "        0., 2., 2., 1., 2., 1., 0., 0., 2., 1., 0., 0., 0., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 3., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+       "       dtype=float32),\n",
+       " array([0., 0., 2., 1., 1., 2., 0., 1., 0., 2., 0., 1., 2., 1., 0., 0., 0.,\n",
+       "        0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       dtype=float32),\n",
+       " array([1., 1., 0., 2., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1.,\n",
+       "        1., 0., 0., 1., 0., 1., 1., 1., 0., 2., 1., 0., 1., 1., 1., 1., 1.,\n",
+       "        0., 1.], dtype=float32)]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_ls"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    ----------------------------------------\n",
+    "    Seed = 1, 10/5 train/test query split\n",
+    "    \n",
+    "    delta_features = False\n",
+    "    Overall:\n",
+    "        MAP:     0.8772\n",
+    "        NDCG@1:  0.7167\n",
+    "        NDCG@3:  0.6580\n",
+    "        NDCG@5:  0.6551\n",
+    "        NDCG@10: 0.7511\n",
+    "        NDCG@m:  0.8404\n",
+    "        \n",
+    "    delta_features = True\n",
+    "    Overall:\n",
+    "        MAP:     0.9184\n",
+    "        NDCG@1:  0.8000\n",
+    "        NDCG@3:  0.8254\n",
+    "        NDCG@5:  0.7619\n",
+    "        NDCG@10: 0.8207\n",
+    "        NDCG@m:  0.8969\n",
+    "        \n",
+    "    ----------------------------------------\n",
+    "    Seed = 2, 10/5 train/test query split\n",
+    "    \n",
+    "    delta_features = False\n",
+    "    Overall:\n",
+    "        MAP:     0.8719\n",
+    "        NDCG@1:  0.6833\n",
+    "        NDCG@3:  0.7657\n",
+    "        NDCG@5:  0.7592\n",
+    "        NDCG@10: 0.7537\n",
+    "        NDCG@m:  0.8828\n",
+    "        \n",
+    "    delta_features = True\n",
+    "    Overall:\n",
+    "        MAP:     0.8321\n",
+    "        NDCG@1:  0.4833\n",
+    "        NDCG@3:  0.5534\n",
+    "        NDCG@5:  0.5941\n",
+    "        NDCG@10: 0.6643\n",
+    "        NDCG@m:  0.8118\n",
+    "\n",
+    "    ----------------------------------------\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    Seed = 2 (train), Seed = 1 (test), delta_features = False, 10 train/5 test queries\n",
+    "    Overall:\n",
+    "        MAP:     0.8830\n",
+    "        NDCG@1:  0.7667\n",
+    "        NDCG@3:  0.6900\n",
+    "        NDCG@5:  0.6284\n",
+    "        NDCG@10: 0.6952\n",
+    "        NDCG@m:  0.8401"
    ]
   }
  ],
