Completed 5 trials of experiment

--- a/other/test_scripts/ranking/Yahoo_Data_Processing.ipynb
+++ b/other/test_scripts/ranking/Yahoo_Data_Processing.ipynb
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data_utils.read_data(data_path='/Users/Ashtekar15/Desktop/Thesis/MGBoost/other/test_data/generate_dataset/',\n",
-    "                            file_prefix='valid')"
+    "# data = data_utils.read_data(data_path='/Users/Ashtekar15/Desktop/Thesis/MGBoost/other/test_data/generate_dataset/',\n",
+    "#                             file_prefix='valid')"
    ]
   },
   {
@@ -89,59 +89,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Num queries in train/val/test (should be 29921)\n",
-    "19944 + 2994 + 6983"
+    "# # Num queries in train/val/test (should be 29921)\n",
+    "# 19944 + 2994 + 6983"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# Get info on number of URLs/query\n",
-    "lls = []\n",
+    "# # Get info on number of URLs/query\n",
+    "# lls = []\n",
     "\n",
-    "for ls in data.gold_weights:\n",
-    "    lls.append(len(ls))\n",
+    "# for ls in data.gold_weights:\n",
+    "#     lls.append(len(ls))\n",
     "\n",
-    "np.mean(lls), np.std(lls), min(lls), max(lls),"
+    "# np.mean(lls), np.std(lls), min(lls), max(lls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solve for num_queries\n",
-    "num_queries = 10\n",
+    "# # Solve for num_queries\n",
+    "# num_queries = 10\n",
     "\n",
-    "mean = np.mean(lls)\n",
+    "# mean = np.mean(lls)\n",
     "\n",
-    "# (Estimated) total size in GB with given num_queries\n",
-    "(700 * 3) * (mean ** 2) * num_queries * 64 / (10 ** 9)"
+    "# # (Estimated) total size in GB with given num_queries\n",
+    "# (700 * 3) * (mean ** 2) * num_queries * 64 / (10 ** 9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To get total number of values FOR ENTIRE TRAIN SET thru feature generation\n",
-    "total = 0\n",
-    "for ls in data.gold_weights:\n",
-    "    total += (700 * 3) * (len(ls) ** 2)\n",
+    "# # To get total number of values FOR ENTIRE TRAIN SET thru feature generation\n",
+    "# total = 0\n",
+    "# for ls in data.gold_weights:\n",
+    "#     total += (700 * 3) * (len(ls) ** 2)\n",
     "\n",
-    "# Estimation of total size in GB\n",
-    "(total * 64) / (10 ** 9)"
+    "# # Estimation of total size in GB\n",
+    "# (total * 64) / (10 ** 9)"
    ]
   },
   {
@@ -170,30 +170,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert lists to np arrays for faster access\n",
+    "# # Convert lists to np arrays for faster access\n",
     "\n",
-    "# String\n",
-    "dids = np.array(data.dids)\n",
+    "# # String\n",
+    "# dids = np.array(data.dids)\n",
     "\n",
-    "# String -> int\n",
-    "qids = np.array(data.qids, dtype=int)\n",
+    "# # String -> int\n",
+    "# qids = np.array(data.qids, dtype=int)\n",
     "\n",
-    "# float64 -> float32\n",
-    "features = np.array(data.features, dtype=np.float32)\n",
+    "# # float64 -> float32\n",
+    "# features = np.array(data.features, dtype=np.float32)\n",
     "\n",
-    "# Since not all sublists of same size\n",
-    "gold_weights = np.array([np.array(x, dtype=np.float32) for x in data.gold_weights])"
+    "# # Since not all sublists of same size\n",
+    "# gold_weights = np.array([np.array(x, dtype=np.float32) for x in data.gold_weights])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' SAVING ENTIRE DATASET '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" SAVING ENTIRE DATASET \"\"\"\n",
     "# folder = 'Yahoo_Train//'\n",
@@ -213,12 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\" LOADING ENTIRE DATASET \"\"\"\n",
-    "folder = 'Yahoo_Val//'\n",
+    "np.random.seed(5)\n",
+    "delta_features = True\n",
+    "dataset = 'val'\n",
+    "\n",
+    "if dataset == 'train':\n",
+    "    folder = 'Yahoo_Train//' \n",
+    "    size = 10\n",
+    "    repeat_importance = True\n",
+    "elif dataset == 'val':\n",
+    "    folder = 'Yahoo_Val//'\n",
+    "    size = 5\n",
+    "    repeat_importance = False\n",
+    "else:\n",
+    "    print('Choose train or val dataset')\n",
     "\n",
     "dids = np.load(folder + 'dids.npy')\n",
     "qids = np.load(folder + 'qids.npy')\n",
@@ -228,14 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" SET SIZE, SEED FOR RANDOM QUERY SELECTION HERE \"\"\"\n",
-    "np.random.seed(2)\n",
-    "size = 5\n",
-    "\n",
     "# Randomly select 10 queries (train) or 5 queries (val)\n",
     "q_choice = np.random.choice(qids, size=size)\n",
     "\n",
@@ -245,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -297,10 +317,6 @@
     }
    ],
    "source": [
-    "\"\"\" SET DELTA FEATURES, REPEAT IMPORTANCE HERE \"\"\"\n",
-    "delta_features = True\n",
-    "repeat_importance = False\n",
-    "\n",
     "n_rows = 0\n",
     "max_diff = 4\n",
     "n_features = 700\n",
@@ -372,43 +388,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Save train/val features\n",
-    "# train_feat = features\n",
-    "val_feat = features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "((19795, 2102), (5817, 2102))"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25817, 2102) (1271, 2102)\n",
+      "Ready to build model\n"
+     ]
     }
    ],
    "source": [
-    "train_feat.shape, val_feat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To work with model\n",
-    "test_feat = val_feat"
+    "# Save train/val features\n",
+    "if dataset == 'train':\n",
+    "    train_feat = features\n",
+    "    print('Now repeat with val dataset')\n",
+    "elif dataset == 'val':\n",
+    "    test_feat = features  # Rename to work with model building\n",
+    "    print(train_feat.shape, test_feat.shape)\n",
+    "    print('Ready to build model')\n",
+    "else:\n",
+    "    print('Choose train or val dataset')"
    ]
   },
   {
@@ -420,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -428,49 +430,49 @@
      "output_type": "stream",
      "text": [
       "Model fitted\n",
-      "Query 21553, m=6:\n",
+      "Query 21369, m=9:\n",
       "\tMAP:     1.0000\n",
       "\tNDCG@1:  1.0000\n",
-      "\tNDCG@3:  1.0000\n",
-      "\tNDCG@5:  1.0000\n",
-      "\tNDCG@10: 1.0000\n",
-      "\tNDCG@m:  1.0000\n",
-      "Query 22292, m=31:\n",
-      "\tMAP:     0.9087\n",
-      "\tNDCG@1:  0.6667\n",
-      "\tNDCG@3:  0.5867\n",
-      "\tNDCG@5:  0.5189\n",
-      "\tNDCG@10: 0.6442\n",
-      "\tNDCG@m:  0.8195\n",
-      "Query 22459, m=50:\n",
-      "\tMAP:     0.9207\n",
-      "\tNDCG@1:  0.2500\n",
-      "\tNDCG@3:  0.5087\n",
-      "\tNDCG@5:  0.5072\n",
-      "\tNDCG@10: 0.5055\n",
-      "\tNDCG@m:  0.7855\n",
-      "Query 22486, m=32:\n",
-      "\tMAP:     0.5441\n",
+      "\tNDCG@3:  0.7841\n",
+      "\tNDCG@5:  0.9101\n",
+      "\tNDCG@10: 0.9264\n",
+      "\tNDCG@m:  0.9264\n",
+      "Query 21670, m=11:\n",
+      "\tMAP:     0.9809\n",
+      "\tNDCG@1:  1.0000\n",
+      "\tNDCG@3:  0.7934\n",
+      "\tNDCG@5:  0.7886\n",
+      "\tNDCG@10: 0.8208\n",
+      "\tNDCG@m:  0.8919\n",
+      "Query 22066, m=12:\n",
+      "\tMAP:     0.6111\n",
+      "\tNDCG@1:  1.0000\n",
+      "\tNDCG@3:  0.5000\n",
+      "\tNDCG@5:  0.5000\n",
+      "\tNDCG@10: 0.6577\n",
+      "\tNDCG@m:  0.6577\n",
+      "Query 22199, m=5:\n",
+      "\tMAP:     0.0000\n",
       "\tNDCG@1:  0.0000\n",
-      "\tNDCG@3:  0.2398\n",
-      "\tNDCG@5:  0.3276\n",
-      "\tNDCG@10: 0.4653\n",
-      "\tNDCG@m:  0.6350\n",
-      "Query 22520, m=36:\n",
-      "\tMAP:     0.7870\n",
-      "\tNDCG@1:  0.5000\n",
-      "\tNDCG@3:  0.4319\n",
-      "\tNDCG@5:  0.6168\n",
-      "\tNDCG@10: 0.7063\n",
-      "\tNDCG@m:  0.8188\n",
+      "\tNDCG@3:  0.0000\n",
+      "\tNDCG@5:  0.0000\n",
+      "\tNDCG@10: 0.0000\n",
+      "\tNDCG@m:  0.0000\n",
+      "Query 22860, m=30:\n",
+      "\tMAP:     0.9494\n",
+      "\tNDCG@1:  1.0000\n",
+      "\tNDCG@3:  0.5692\n",
+      "\tNDCG@5:  0.5949\n",
+      "\tNDCG@10: 0.6405\n",
+      "\tNDCG@m:  0.8044\n",
       "\n",
       "Overall:\n",
-      "\tMAP:     0.8321\n",
-      "\tNDCG@1:  0.4833\n",
-      "\tNDCG@3:  0.5534\n",
-      "\tNDCG@5:  0.5941\n",
-      "\tNDCG@10: 0.6643\n",
-      "\tNDCG@m:  0.8118\n"
+      "\tMAP:     0.7083\n",
+      "\tNDCG@1:  0.8000\n",
+      "\tNDCG@3:  0.5293\n",
+      "\tNDCG@5:  0.5587\n",
+      "\tNDCG@10: 0.6091\n",
+      "\tNDCG@m:  0.6561\n"
      ]
     }
    ],
@@ -564,29 +566,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([2., 1., 1., 1., 1., 1.], dtype=float32),\n",
-       " array([2., 2., 1., 0., 1., 2., 2., 3., 1., 2., 1., 1., 1., 0., 2., 1., 1.,\n",
-       "        1., 3., 3., 1., 2., 1., 2., 1., 1., 2., 1., 2., 1., 2.],\n",
-       "       dtype=float32),\n",
-       " array([1., 1., 4., 1., 1., 1., 1., 1., 1., 1., 2., 3., 1., 1., 2., 1., 2.,\n",
-       "        0., 2., 2., 1., 2., 1., 0., 0., 2., 1., 0., 0., 0., 1., 1., 1., 1.,\n",
-       "        1., 1., 1., 1., 3., 1., 1., 2., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
-       "       dtype=float32),\n",
-       " array([0., 0., 2., 1., 1., 2., 0., 1., 0., 2., 0., 1., 2., 1., 0., 0., 0.,\n",
-       "        0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       dtype=float32),\n",
-       " array([1., 1., 0., 2., 1., 1., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1.,\n",
-       "        1., 0., 0., 1., 0., 1., 1., 1., 0., 2., 1., 0., 1., 1., 1., 1., 1.,\n",
-       "        0., 1.], dtype=float32)]"
+       "[array([4., 2., 2., 4., 2., 2., 2., 2., 1.], dtype=float32),\n",
+       " array([3., 2., 2., 2., 1., 1., 1., 2., 0., 3., 3.], dtype=float32),\n",
+       " array([1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0.], dtype=float32),\n",
+       " array([0., 0., 0., 0., 0.], dtype=float32),\n",
+       " array([4., 1., 1., 1., 2., 1., 1., 1., 2., 2., 2., 0., 3., 2., 1., 1., 1.,\n",
+       "        1., 0., 1., 1., 1., 1., 1., 0., 4., 1., 1., 0., 1.], dtype=float32)]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing"
+    "## Results"
    ]
   },
   {
@@ -649,21 +643,67 @@
     "        NDCG@m:  0.8118\n",
     "\n",
     "    ----------------------------------------\n",
+    "    Seed = 3, 10/5 train/test query split\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    Seed = 2 (train), Seed = 1 (test), delta_features = False, 10 train/5 test queries\n",
+    "    delta_features = False\n",
     "    Overall:\n",
-    "        MAP:     0.8830\n",
+    "        MAP:     0.9861\n",
+    "        NDCG@1:  0.6000\n",
+    "        NDCG@3:  0.7820\n",
+    "        NDCG@5:  0.7744\n",
+    "        NDCG@10: 0.8527\n",
+    "        NDCG@m:  0.8981\n",
+    "    \n",
+    "    delta_features = True\n",
+    "    Overall:\n",
+    "        MAP:     0.9971\n",
     "        NDCG@1:  0.7667\n",
-    "        NDCG@3:  0.6900\n",
-    "        NDCG@5:  0.6284\n",
-    "        NDCG@10: 0.6952\n",
-    "        NDCG@m:  0.8401"
+    "        NDCG@3:  0.7127\n",
+    "        NDCG@5:  0.7652\n",
+    "        NDCG@10: 0.8226\n",
+    "        NDCG@m:  0.8843\n",
+    "        \n",
+    "    ----------------------------------------\n",
+    "    Seed = 4, 10/5 train/test query split\n",
+    "    \n",
+    "    delta_features = False\n",
+    "    Overall:\n",
+    "        MAP:     0.8894\n",
+    "        NDCG@1:  0.6833\n",
+    "        NDCG@3:  0.6791\n",
+    "        NDCG@5:  0.6977\n",
+    "        NDCG@10: 0.7723\n",
+    "        NDCG@m:  0.8520\n",
+    "        \n",
+    "    delta_features = True\n",
+    "    Overall:\n",
+    "        MAP:     0.8644\n",
+    "        NDCG@1:  0.6000\n",
+    "        NDCG@3:  0.6824\n",
+    "        NDCG@5:  0.7199\n",
+    "        NDCG@10: 0.7619\n",
+    "        NDCG@m:  0.8469\n",
+    "        \n",
+    "    ----------------------------------------\n",
+    "    Seed = 5, 10/5 train/test query split\n",
+    "    \n",
+    "    delta_features = False\n",
+    "    Overall:\n",
+    "        MAP:     0.7018\n",
+    "        NDCG@1:  0.8000\n",
+    "        NDCG@3:  0.5293\n",
+    "        NDCG@5:  0.5500\n",
+    "        NDCG@10: 0.6009\n",
+    "        NDCG@m:  0.6525\n",
+    "\n",
+    "    delta_features = True\n",
+    "    Overall:\n",
+    "        MAP:     0.7083\n",
+    "        NDCG@1:  0.8000\n",
+    "        NDCG@3:  0.5293\n",
+    "        NDCG@5:  0.5587\n",
+    "        NDCG@10: 0.6091\n",
+    "        NDCG@m:  0.6561"
    ]
   }
  ],
